--- a/app/amplify/functions/processEssay/package.json
+++ b/app/amplify/functions/processEssay/package.json
@@ -7,7 +7,8 @@
     "@aws-sdk/client-bedrock-runtime": "^3.848.0",
     "@aws-sdk/client-dynamodb": "^3.848.0",
     "@aws-sdk/client-ses": "^3.848.0",
-    "@aws-sdk/lib-dynamodb": "^3.850.0"
+    "@aws-sdk/lib-dynamodb": "^3.850.0",
+    "aws-xray-sdk-core": "^3.10.3"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.136",
