--- a/app/amplify/functions/submitEssayToQueue/package.json
+++ b/app/amplify/functions/submitEssayToQueue/package.json
@@ -4,9 +4,10 @@
   "description": "Submit essay to SQS queue",
   "main": "handler.js",
   "dependencies": {
-    "@aws-sdk/client-sqs": "^3.0.0",
     "@aws-sdk/client-dynamodb": "^3.0.0",
-    "@aws-sdk/lib-dynamodb": "^3.0.0"
+    "@aws-sdk/client-sqs": "^3.0.0",
+    "@aws-sdk/lib-dynamodb": "^3.0.0",
+    "aws-xray-sdk-core": "^3.10.3"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.119",
