--- a/scripts/package.json
+++ b/scripts/package.json
@@ -11,8 +11,10 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.848.0",
+    "@aws-sdk/client-sqs": "^3.848.0",
     "@aws-sdk/lib-dynamodb": "^3.850.0",
     "@types/node": "^24.1.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "uuid": "^11.1.0"
   }
 }
