--- a/amplify.yml
+++ b/amplify.yml
@@ -17,9 +17,9 @@ frontend:
         - npm ci --cache .npm --prefer-offline
     build:
       commands:
-        - npm run build
+        - npx @aws-amplify/adapter-nextjs@latest build
   artifacts:
-    baseDirectory: .next
+    baseDirectory: .amplify-hosting
     files:
       - '**/*'
   cache:
