--- a/amplify.yml
+++ b/amplify.yml
@@ -14,12 +14,14 @@ frontend:
     preBuild:
       commands:
         - nvm use 20
+        - cd app
         - npm ci --cache .npm --prefer-offline
     build:
       commands:
+        - cd app
         - npx @aws-amplify/adapter-nextjs@latest build
   artifacts:
-    baseDirectory: .amplify-hosting
+    baseDirectory: app/.amplify-hosting
     files:
       - '**/*'
   cache:
