--- a/amplify.yml
+++ b/amplify.yml
@@ -14,10 +14,11 @@ frontend:
     preBuild:
       commands:
         - nvm use 20
+        - cd app
+        - npm ci --cache .npm --prefer-offline
     build:
       commands:
-        - cd app && npm ci --cache .npm --prefer-offline
-        - cd app && npx @aws-amplify/adapter-nextjs@latest build
+        - npx @aws-amplify/adapter-nextjs@latest build
   artifacts:
     baseDirectory: app/.amplify-hosting
     files:
