--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "npx @aws-amplify/adapter-nextjs@latest build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
