Fix Amplify SSR deployment with standalone Next.js build
- Configure Next.js with standalone output for SSR
- Update amplify.yml to use standalone build artifacts
- Add custom server entry point for Amplify hosting
- Fix deploy-manifest.json missing error

--- a/amplify.yml
+++ b/amplify.yml
@@ -19,8 +19,11 @@ frontend:
     build:
       commands:
         - npm run build
+        - cp -r public .next/standalone/app/ || true
+        - cp -r .next/static .next/standalone/app/.next/ || true
+        - cp amplify-server.js .next/standalone/app/server.js || true
   artifacts:
-    baseDirectory: app/.next
+    baseDirectory: app/.next/standalone/app
     files:
       - '**/*'
   cache:
