--- a/amplify.yml
+++ b/amplify.yml
@@ -14,16 +14,13 @@ frontend:
     preBuild:
       commands:
         - nvm use 20
-        - cd app
-        - npm ci --cache .npm --prefer-offline
     build:
       commands:
-        - npm run build
-        - cp -r public .next/standalone/app/ || true
-        - cp -r .next/static .next/standalone/app/.next/ || true
-        - cp amplify-server.js .next/standalone/app/server.js || true
+        - cd app
+        - npm ci --cache .npm --prefer-offline
+        - npx @aws-amplify/adapter-nextjs@1 build
   artifacts:
-    baseDirectory: app/.next/standalone/app
+    baseDirectory: app/.amplify-hosting
     files:
       - '**/*'
   cache:
