--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "aws-cdk-lib": "^2.206.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.9",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
     "react": "19.1.0",
