--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "@aws-amplify/adapter-nextjs": "^1.6.7",
     "@aws-amplify/backend": "^1.16.1",
     "@aws-amplify/backend-cli": "^1.8.0",
+    "@aws-amplify/data-schema-types": "^1.2.0",
     "@aws-amplify/ui-react": "^6.11.2",
     "@aws-sdk/client-ses": "^3.848.0",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -42,6 +43,7 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.20.3",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
   }
