--- a/scripts/package.json
+++ b/scripts/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-bedrock-runtime": "^3.848.0",
     "@aws-sdk/client-dynamodb": "^3.848.0",
     "@aws-sdk/client-sqs": "^3.848.0",
     "@aws-sdk/lib-dynamodb": "^3.850.0",
