--- a/app/amplify/functions/generateEmbeddings/package.json
+++ b/app/amplify/functions/generateEmbeddings/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.0.0",
     "@aws-sdk/lib-dynamodb": "^3.0.0",
-    "@aws-sdk/client-bedrock-runtime": "^3.0.0",
-    "aws-xray-sdk-core": "^3.6.0"
+    "@aws-sdk/client-bedrock-runtime": "^3.0.0"
   }
 }
