--- a/amplify.yml
+++ b/amplify.yml
@@ -1,35 +1,30 @@
 version: 1
-backend:
-  phases:
-    build:
-      commands:
-        - nvm use 20
-        - ls -la  # Debug: Check directory structure
-        - cd app || true  # Try to cd, but don't fail if it doesn't exist
-        - pwd  # Debug: Show current directory
-        - npm ci --cache .npm --prefer-offline
-        - cd amplify/functions/processEssay && npm ci && cd ../../..
-        - cd amplify/functions/submitEssayToQueue && npm ci && cd ../../..
-        - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
-frontend:
-  phases:
-    preBuild:
-      commands:
-        - nvm use 20
-        - ls -la  # Debug: Check directory structure
-        - cd app || true  # Try to cd, but don't fail if it doesn't exist
-        - pwd  # Debug: Show current directory
-        - npm ci --cache .npm --prefer-offline
-    build:
-      commands:
-        - cd app || true  # Try to cd, but don't fail if it doesn't exist
-        - npm run build
-  artifacts:
-    baseDirectory: app/.next
-    files:
-      - '**/*'
-  cache:
-    paths:
-      - app/.next/cache/**/*
-      - app/.npm/**/*
-      - app/node_modules/**/*
+applications:
+  - appRoot: app
+    backend:
+      phases:
+        build:
+          commands:
+            - nvm use 20
+            - npm ci --cache .npm --prefer-offline
+            - cd amplify/functions/processEssay && npm ci && cd ../../..
+            - cd amplify/functions/submitEssayToQueue && npm ci && cd ../../..
+            - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
+    frontend:
+      phases:
+        preBuild:
+          commands:
+            - nvm use 20
+            - npm ci --cache .npm --prefer-offline
+        build:
+          commands:
+            - npm run build
+      artifacts:
+        baseDirectory: .next
+        files:
+          - '**/*'
+      cache:
+        paths:
+          - .next/cache/**/*
+          - .npm/**/*
+          - node_modules/**/*
