--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -23,5 +23,10 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules",
+    "amplify/functions/generateEmbeddings/**",
+    "amplify/functions/processEssay/handler.ts",
+    "amplify/functions/submitEssayToQueue/handler.ts"
+  ]
 }
