--- a/scripts/package.json
+++ b/scripts/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-bedrock": "^3.857.0",
     "@aws-sdk/client-bedrock-runtime": "^3.848.0",
     "@aws-sdk/client-dynamodb": "^3.848.0",
+    "@aws-sdk/client-service-quotas": "^3.857.0",
     "@aws-sdk/client-sqs": "^3.848.0",
     "@aws-sdk/lib-dynamodb": "^3.850.0",
     "@types/node": "^24.1.0",
