--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
+    "@xstate/react": "^6.0.0",
     "aws-amplify": "^6.15.3",
     "aws-cdk-lib": "^2.206.0",
     "class-variance-authority": "^0.7.1",
@@ -37,7 +38,8 @@
     "react-dom": "19.1.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "xstate": "^4.38.3"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.152",
