--- a/app/package.json
+++ b/app/package.json
@@ -26,11 +26,12 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
-    "@xstate/react": "^6.0.0",
+    "@xstate/react": "^3.2.2",
     "aws-amplify": "^6.15.3",
     "aws-cdk-lib": "^2.206.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "constructs": "^10.4.2",
     "framer-motion": "^12.23.9",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
