--- a/scripts/package.json
+++ b/scripts/package.json
@@ -1,6 +1,7 @@
 {
   "name": "scripts",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -8,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Scripts for PTE Essay Checker",
   "dependencies": {
     "@aws-sdk/client-bedrock": "^3.857.0",
     "@aws-sdk/client-bedrock-runtime": "^3.848.0",
